# mega-engine

./: .gitignore  AGENTS.md  README.md  README_Mega_Engine.md  pyproject.toml  requirements.txt
.github/workflows/: backtest.yml  compare_results.yml  daily-generate-megasena-json.yml  daily_generate.yml  generate_images.yml  optimize.yml  recalibration.yml  recalibration_full.yml
configs/: strategy_config.json
core/: audit_performance_log.py  backtest.py  bayes_megasena.py  compare_results.py  config.py  export_json.py  features_megasena.py  generator.py  image_generator.py  ingest_megasena.py  learning.py  monitor_performance.py  optimize.py  promotion.py  time_utils.py  versioning.py
data/: config_promotion_log.jsonl  last_result.json  learning_log.jsonl  model_history.jsonl  performance_log.jsonl
data/features/: dezenas.csv
data/results/: megasena.csv
tests/: test_backtest.py  test_compare.py  test_features.py  test_generator.py  test_ingest.py  test_learning.py  test_monitor.py  test_promotion.py
